Include user history in model and in API logic
